--- a/blog.html
+++ b/blog.html
@@ -73,6 +73,63 @@
 <div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
+      <h2>2022 Update - Newsletter & Summer Exhibit</h2>
+      <hr>
+      <h5>March 12, 2022 | Mick Jarvis</h5>
+    </div>
+
+     <!-- Slideshow container -->
+<div class="slideshow-container">
+
+<!-- Full-width images with number and caption text -->
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">1 / 2</div>
+    <img src="blog/imgs/2022-03-12_2022update-1/2022update-1_01.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">2 / 2</div>
+    <img src="blog/imgs/2022-03-12_2022update-1/2022update-1_02.jpg" style="width:100%">
+  </div>
+
+
+      <!-- Next and previous buttons -->
+  <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
+</div>
+<br>
+
+
+        <div class="blog-text">
+        <p>Our first newsletter issue of 2022 will be mailed this coming Tuesday. This issue contains articles about: the two airplanes built in Chateaugay during the 60s and 70s, a history of all the businesses in the Jackson/Mitchell block (where Jimmy Mills moved to, on the corner of East Main and Depot) over the years since its construction in 1876, a reminiscence by Royal Nadeau of threshing day in the 40s, and the story of the Smith/Alvord/Cook house (Odie and Barb Cook's stone house) on East Main, from its construction in 1818, to the present.</p>
+
+<p>Lots to read and see (we have again included many, many illustrations and photos throughout the 28 pages). Members, watch your mailboxes!</p>
+
+<p>Also, planning continues for the summer exhibit. It will tell the story of the early years on Chateaugay Lake, from the first settlers through the later 1800s and the construction of the Forge dam, which changed the surface area of the Lakes and the Narrows and helped both the tourist and the iron mining industries thrive.</p>
+
+<p>The exhibit will highlight the early settlers, the earliest sporting visitors, the first schoolhouses, methods of transportation - on the lakes as well as to and from them, the seasonal Native American presence, as well as the Native legends of the Lakes, and a full-color, framed, and matted display of the seven A.F. Tait paintings and lithographs set in the Chateaugay Lakes area. Tait produced these works in the mid-1800s, when he was a frequent visitor to the Bellows House (later, the Banner House).</p>
+
+<p>Plan on visiting the Archival Center this summer to take it in! Opening date to be published here soon...</p>
+
+<p>As you can see, we have been (and will continue to be) busy producing content for both members and the general public - all made possible by your continued memberships and support.</p> 
+
+<p>Thank you so much!</p>
+
+<p>Above is an image of the first page from the upcoming issue. Also shown is an illustration a friend sent me. I think it's good for a chuckle or two.</p>
+
+<p>Think spring!!</p>
+        </div>
+    </div>
+</div>
+
+
+<!-- Site Page -->
+<div id="blog2">
+  <div class="container">
+    <div class="section-title text-center center">
       <h2>Pine Lodge</h2>
       <hr>
       <h5>February 13, 2022 | Mick Jarvis</h5>
@@ -84,27 +141,27 @@
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">1 / 3</div>
     <img src="blog/imgs/2022-02-13_pinelodge/pinelodge_01.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">2 / 3</div>
     <img src="blog/imgs/2022-02-13_pinelodge/pinelodge_02.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">3 / 3</div>
     <img src="blog/imgs/2022-02-13_pinelodge/pinelodge_03.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
 </div>
 <br>
 
@@ -133,7 +190,7 @@
 
 
 <!-- Site Page -->
-<div id="blog2">
+<div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
       <h2>Baseball Memories at the "Old School"</h2>
@@ -147,39 +204,39 @@
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">1 / 5</div>
     <img src="blog/imgs/2022-01-22_baseballmemories/baseballmemories_01.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">2 / 5</div>
     <img src="blog/imgs/2022-01-22_baseballmemories/baseballmemories_02.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">3 / 5</div>
     <img src="blog/imgs/2022-01-22_baseballmemories/baseballmemories_03.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">4 / 5</div>
     <img src="blog/imgs/2022-01-22_baseballmemories/baseballmemories_04.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">5 / 5</div>
     <img src="blog/imgs/2022-01-22_baseballmemories/baseballmemories_05.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 2)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 2)">&#10095;</a>
 </div>
 <br>
 
@@ -235,195 +292,12 @@
 </div>
 
 
-<!-- Site Page -->
-<div id="blog1">
-  <div class="container">
-    <div class="section-title text-center center">
-      <h2>Chateaugay Businesses One Hundred Years Ago</h2>
-      <hr>
-      <h5>January 12, 2022 | Mick Jarvis</h5>
-    </div>
-
-     <!-- Slideshow container -->
-<div class="slideshow-container">
-
-<!-- Full-width images with number and caption text -->
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">1 / 24</div>
-    <img src="blog/imgs/2022-01-12_business100yrs/business100yrs_01.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">2 / 24</div>
-    <img src="blog/imgs/2022-01-12_business100yrs/business100yrs_02.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">3 / 24</div>
-    <img src="blog/imgs/2022-01-12_business100yrs/business100yrs_03.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">4 / 24</div>
-    <img src="blog/imgs/2022-01-12_business100yrs/business100yrs_04.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">5 / 24</div>
-    <img src="blog/imgs/2022-01-12_business100yrs/business100yrs_05.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">6 / 24</div>
-    <img src="blog/imgs/2022-01-12_business100yrs/business100yrs_06.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">7 / 24</div>
-    <img src="blog/imgs/2022-01-12_business100yrs/business100yrs_07.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">8 / 24</div>
-    <img src="blog/imgs/2022-01-12_business100yrs/business100yrs_08.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">9 / 24</div>
-    <img src="blog/imgs/2022-01-12_business100yrs/business100yrs_09.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">10 / 24</div>
-    <img src="blog/imgs/2022-01-12_business100yrs/business100yrs_10.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">11 / 24</div>
-    <img src="blog/imgs/2022-01-12_business100yrs/business100yrs_11.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">12 / 24</div>
-    <img src="blog/imgs/2022-01-12_business100yrs/business100yrs_12.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">13 / 24</div>
-    <img src="blog/imgs/2022-01-12_business100yrs/business100yrs_13.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">14 / 24</div>
-    <img src="blog/imgs/2022-01-12_business100yrs/business100yrs_14.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">15 / 24</div>
-    <img src="blog/imgs/2022-01-12_business100yrs/business100yrs_15.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">16 / 24</div>
-    <img src="blog/imgs/2022-01-12_business100yrs/business100yrs_16.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">17 / 24</div>
-    <img src="blog/imgs/2022-01-12_business100yrs/business100yrs_17.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">18 / 24</div>
-    <img src="blog/imgs/2022-01-12_business100yrs/business100yrs_18.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">19 / 24</div>
-    <img src="blog/imgs/2022-01-12_business100yrs/business100yrs_19.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">20 / 24</div>
-    <img src="blog/imgs/2022-01-12_business100yrs/business100yrs_20.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">21 / 24</div>
-    <img src="blog/imgs/2022-01-12_business100yrs/business100yrs_21.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">22 / 24</div>
-    <img src="blog/imgs/2022-01-12_business100yrs/business100yrs_22.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">23 / 24</div>
-    <img src="blog/imgs/2022-01-12_business100yrs/business100yrs_23.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">24 / 24</div>
-    <img src="blog/imgs/2022-01-12_business100yrs/business100yrs_24.jpg" style="width:100%">
-  </div>
-
-
-      <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 2)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 2)">&#10095;</a>
-</div>
-<br>
-
-
-        <div class="blog-text">
-        <p>Today, we journey back 100 years to a selection of ads in the Chateaugay Record during January of 1922. </p>
-
-<p>Back then, the small-town economic model was fully in operation. Shopping was most often done in local businesses and each community offered a wide selection of goods and services that met most wants or needs. Note the broad variety available in the two dozen ads (and the prices as well!). </p>
-
-<p>Main Street commercial store-fronts were all full and the spaces often had waiting lists of prospective businesses hoping for an opportunity to open their doors.</p>
-
-<p>The scores of local and area dairy farmers were coming into town every day with cans of milk for the local plants. While in town, they had an opportunity to stop in the various businesses and pick up needed goods. And, of course, entire families would pack the businesses each weekend, beginning on Friday nights. This was an opportunity not only to do the week’s shopping but to socialize at the same time.</p>
-
-<p>Economic models have evolved in the last century. From small-town, local economies, to the emergence of larger, regional stores, “shopping centers”, to large malls, and now to on-line and remote models, the changes to shopping were swift and eventful during the last ten decades.</p>
-
-<p>Even so, while perusing the ads shown here, it is easy to imagine the hustle and bustle of Chateaugay’s vibrant, local economy “back in the day.”</p>
-        </div>
-    </div>
-</div>
-
-
 <!--Footer-->
 <div id="footer">
   <div class="container text-center">
     <div class="fnav">
       <p>Copyright &copy; 2018 Chateaugay Historical Society. </br>
-      Last Modified [February 13, 2022]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
+      Last Modified [March 16, 2022]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
     </div>
   </div>
 </div>
